After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 637606 - Missing out annotations for gtk_accelerator_parse and gtk_icon_size_lookup
Missing out annotations for gtk_accelerator_parse and gtk_icon_size_lookup
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2010-12-19 20:57 UTC by jessevdk@gmail.com
Modified: 2010-12-21 13:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Added out annotations for gtk_accelerator_parse (1.04 KB, patch)
2010-12-19 20:57 UTC, jessevdk@gmail.com
committed Details | Review
Added out annotations for gtk_icon_size_lookup/_for_settings (1.46 KB, patch)
2010-12-19 20:57 UTC, jessevdk@gmail.com
committed Details | Review

Description jessevdk@gmail.com 2010-12-19 20:57:29 UTC
Attached patches add out annotations for the out parameters of gtk_accelerator_parse and gtk_icon_size_lookup/for_settings.
Comment 1 jessevdk@gmail.com 2010-12-19 20:57:38 UTC
Created attachment 176717 [details] [review]
Added out annotations for gtk_accelerator_parse
Comment 2 jessevdk@gmail.com 2010-12-19 20:57:48 UTC
Created attachment 176718 [details] [review]
Added out annotations for gtk_icon_size_lookup/_for_settings
Comment 3 Matthias Clasen 2010-12-20 16:14:42 UTC
Review of attachment 176717 [details] [review]:

Please commit
Comment 4 Matthias Clasen 2010-12-20 16:15:17 UTC
Review of attachment 176718 [details] [review]:

Please commit