Added out annotations for gtk_icon_size_lookup/_for_settings

Backported from master commit e36ba3465.

https://bugzilla.gnome.org/show_bug.cgi?id=637606